[package]
name = "rust_crud"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
http = "1.1.0"
serde = { version = "1.0.204", features = ["derive"] }
tokio = { version = "1.38.1" , features = ["rt-multi-thread"]}
lazy_static = "1.5.0"
rusqlite = "0.32.1"
uuid = { version = "1.10.0" , features = ["v4"]}
rust-patch = "0.1.3"
